# web-demo

./: .gitignore
backend/: main.py  pyproject.toml
frontend/: package.json
frontend/src/: App.tsx  CreateTodo.tsx  TodoList.tsx  main.tsx  vite-env.d.ts
frontend/src/lib/: types.ts
